# Neotec_ai

./: README.md  license.txt  pyproject.toml
neotec_ai/: api.py  hooks.py  install.py
neotec_ai/core/: advisory.py  dashboard.py  intent.py  render.py  reporting.py  solution.py
neotec_ai/llm/: client.py
neotec_ai/neotec_ai/doctype/neotec_allowed_doctype/: neotec_allowed_doctype.json  neotec_allowed_doctype.py
neotec_ai/neotec_ai/doctype/neotec_operation_log/: neotec_operation_log.json  neotec_operation_log.py
neotec_ai/neotec_ai/doctype/neotec_prompt_template/: neotec_prompt_template.json  neotec_prompt_template.py
neotec_ai/neotec_ai/doctype/neotec_saved_report/: neotec_saved_report.json  neotec_saved_report.py
neotec_ai/neotec_ai/doctype/neotec_settings/: neotec_settings.json  neotec_settings.py
neotec_ai/neotec_ai/page/neotec_console/: neotec_console.js  neotec_console.json
